# leisair-be

./: .dockerignore  .gitignore  .pylintrc  README.md  celery_worker.py  dockerfile  export.py  logger.py  main.py  mongo_handler.py  pyproject.toml  requirements.txt  run_api.bat  run_celery.bat  run_flower.bat  run_redis.bat  schemas.py
.github/workflows/: build-python-backend.yml
app/: celery_worker.py  file_watcher.py  main.py  mongo_handler.py  schemas.py
app/model/: LEISair 21_11_23 all classes.yaml
app/routers/: api.py  websocket.py
app/services/: vessel_detection.py
leisair_ml/: celery_worker.py  docker-compose.yml  run_api.py  run_worker.py  schemas.py
leisair_ml/models/: common.py  experimental.py  tf.py  yolo.py
leisair_ml/routers/: api.py  file_upload.py  model_update.py  update.py
leisair_ml/services/: model_update.py  vessel_detection.py
leisair_ml/utils/: __init__.py  augmentations.py  autoanchor.py  autobatch.py  dataloaders.py  downloads.py  export.py  file_watcher.py  general.py  loss.py  metrics.py  mongo_handler.py  plots.py  torch_utils.py
leisair_ml/utils/loggers/: __init__.py
leisair_ml/utils/loggers/clearml/: clearml_utils.py
leisair_ml/utils/loggers/comet/: __init__.py  hpo.py
leisair_ml/utils/loggers/wandb/: wandb_utils.py
leisair_ml/utils/segment/: plots.py
models/: common.py
routers/: api.py  websocket.py
services/: vessel_detection.py
